--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,42 @@
         })
     }
 
+    function searchLevelLT() {
+      let TestDataClass = ncmb.DataStore(db);
+      let level = parseInt( $("#level").val() );
+      TestDataClass.lessThan("level" , level).fetchAll()
+        .then(function(results) {
+          showResults(results);
+        })
+    }
+
+    function searchLevelLTOET() {
+      let TestDataClass = ncmb.DataStore(db);
+      let level = parseInt( $("#level").val() );
+      TestDataClass.lessThanOrEqualTo("level" , level).fetchAll()
+        .then(function(results) {
+          showResults(results);
+        })
+    }
+
+    function searchLevelGT() {
+      let TestDataClass = ncmb.DataStore(db);
+      let level = parseInt( $("#level").val() );
+      TestDataClass.greaterThan("level" , level).fetchAll()
+        .then(function(results) {
+          showResults(results);
+        })
+    }
+
+    function searchLevelGTOET() {
+      let TestDataClass = ncmb.DataStore(db);
+      let level = parseInt( $("#level").val() );
+      TestDataClass.greaterThanOrEqualTo("level" , level).fetchAll()
+        .then(function(results) {
+          showResults(results);
+        })
+    }
+
     function showResults(results) {
       // テーブルのヘッダを生成
       let msg = "<table><tr><th>name</th><th>Lvl</th><th>attack</th><th>defence</th></tr>";
@@ -77,6 +113,10 @@
     <br>
     <button class="btn" onclick="searchLevelLT()">Level &lt</button>
     <button class="btn" onclick="searchLevel()">Level</button>
+    <button class="btn" onclick="searchLevelGT()">Level &gt</button>
+    <br>
+    <button class="btn" onclick="searchLevelLTOET()">Level &lt=</button>
+    <button class="btn" onclick="searchLevelGTOET()">Level &gt=</button>
   </div>
   <div id="message">message area</div>
 </body>
