--- a/www/index.html
+++ b/www/index.html
@@ -111,12 +111,12 @@
     <button class="btn" onclick="fetchAll()">Fetch All</button>
     <button class="btn" onclick="searchName()">Name</button>
     <br>
-    <button class="btn" onclick="searchLevelLT()">Level &lt</button>
+    <button class="btn" onclick="searchLevelLT()">Level &lt;</button>
     <button class="btn" onclick="searchLevel()">Level</button>
-    <button class="btn" onclick="searchLevelGT()">Level &gt</button>
+    <button class="btn" onclick="searchLevelGT()">Level &gt;</button>
     <br>
-    <button class="btn" onclick="searchLevelLTOET()">Level &lt=</button>
-    <button class="btn" onclick="searchLevelGTOET()">Level &gt=</button>
+    <button class="btn" onclick="searchLevelLTOET()">Level &lt;=</button>
+    <button class="btn" onclick="searchLevelGTOET()">Level &gt;=</button>
   </div>
   <div id="message">message area</div>
 </body>
